fix gap bug and add font

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,28 @@
 body {
     padding: 0;
     margin: 0;
+    height: 100%;
+    font-family: 'Helvetica';
 }
 
-.wrapper, .footer-wrapper {
-    padding: 100px;  
+.wrapper,
+.footer-wrapper {
+    padding: 100px;
 }
 
 .triangle-topleft {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: black;
-    clip-path: polygon(0 0, 100% 0, 100% 40%,0 80%);
+    clip-path: polygon(0 0, 100% 0, 100% 40%, 0 80%);
     z-index: -1;
 }
 
 * {
     box-sizing: border-box;
-
 }
+
 
 .about-me-image img {
     height: 400px;
@@ -56,12 +59,12 @@ body {
 .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 5%;
+    gap: 5rem;
     padding-bottom: 5rem;
 }
 
 .card-container img {
-    width: 100%;
+    max-width: 100%;
     object-fit: cover;
 }
 
@@ -79,7 +82,7 @@ header {
     font-size: 2rem;
 }
 
-.title-and-icons .icons i{
+.title-and-icons .icons i {
     font-size: 1.5rem;
 }
 
@@ -87,10 +90,7 @@ footer .icons {
     justify-content: flex-start;
 }
 
-footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
+
 
 picture {
     display: flex;
@@ -104,8 +104,19 @@ picture {
 }
 
 .footer-wrapper {
-     background: black;
-     color:white;
+    background: black;
+    color: white;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.footer-contact-me {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 
@@ -130,11 +141,10 @@ picture {
 
     .card-container {
         display: grid;
-        grid-template-columns: 1fr 1fr ;
-        grid-template-rows: auto;
-        gap: 5%;
+        grid-template-columns: 1fr 1fr;
+        gap: 5rem;
     }
-    
+
 
 }
 
@@ -152,8 +162,8 @@ picture {
 
     .card-container {
         display: grid;
-        grid-template-columns: 1fr;
-        gap: 5%;
+        grid-template-columns: minmax(0, 1fr);
+        gap: 5rem;
     }
 
     footer {
